...
        onFieldSubmitted: tryNext,
        keyboardType: TextInputType.number,
        decoration: InputDecoration(
          prefixText: kMoneyPrefix.getValue(locale),
          hintText: LocalizedMap(
        {
              languages.en: 'Enter your current balance',
              languages.ru: 'Введите ваш текущий баланс',
              languages.it: 'Inserisci il tuo saldo attuale',
            },
          ).getValue(locale),
        ),
      ),
...
        onFieldSubmitted: tryNext,
        keyboardType: TextInputType.number,
        decoration: InputDecoration(
          prefixText: kMoneyPrefix.getValue(locale),
          hintText: LocalizedMap(
        {
              languages.en: 'Enter your total expenses',
              languages.ru: 'Введите ваши общие расходы',
              languages.it: 'Inserisci le tue spese totali',
            },
          ).getValue(locale),
        ),
      ),
...
      ).getValue(locale),
      content: ElevatedButton(
        child: Text(
          selectedDate.value == null
              ? LocalizedMap(
        {
                    languages.en: 'Select Next Salary Date',
                    languages.ru: 'Выберите дату следующей зарплаты',
                    languages.it: 'Seleziona la data del prossimo stipendio',
                  },
                ).getValue(locale)
              : DateFormat('MMM d, y').format(selectedDate.value!),
        ),
...
            Center(
              child: ElevatedButton(
                onPressed: onFinish,
                child: Text(
                  LocalizedMap(
        {
                      languages.en: "Cool! Let's start!",
                      languages.ru: 'Круто! Давайте продолжим!',
                      languages.it: 'Fantastico! Iniziamo!',
                    },
                  ).getValue(locale),
                ),
              ).animate().fadeIn(),
...
            if (onNext != null)
              ElevatedButton(
                onPressed: onNext,
                child: Text(
                  LocalizedMap(
        {
                      languages.en: 'Next',
                      languages.ru: 'Далее',
                      languages.it: 'Avanti',
                    },
                  ).getValue(useLocale(context)),
                ),
              ).animate().fadeIn(),
...
