...
          ),
          _buildBudgetItem(
            locale: locale,
            useDouble: false,
            label: LocalizedMap(
        {
                languages.en: 'Days in Total',
                languages.ru: 'Всего дней',
                languages.it: 'Giorni in totale',
              },
            ).getValue(locale),
            value: monthlyCubit.daysCount.toString(),
            icon: Icons.date_range,
...
