...
        Column(
              mainAxisSize: MainAxisSize.min,
              children: [
                UiPopupListTile(
                  onTap: () async => AppPathsController.of(context).toTerms(),
                  title: LocalizedMap({
                    languages.en: 'Terms of use',
                    languages.it: 'Condizioni di utilizzo',
                    languages.ru: 'Условия использования',
                  }).getValue(useLocale(context)),
                  iconData: CupertinoIcons.doc_plaintext,
                ),
                const UiDivider.size1(),
                UiPopupListTile(
                  onTap: () async => AppPathsController.of(context).toPrivacy(),
                  title: LocalizedMap({
                    languages.en: 'Privacy policy',
                    languages.it: 'Condizioni di utilizzo',
                    languages.ru: 'Приватность',
                  }).getValue(useLocale(context)),
                  iconData: Icons.privacy_tip_outlined,
                ),
                const UiDivider.size1(),
...
